SITECAST-25 Fix Starveups logos by cropping strange white space, and adding slight box shadow to all

--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -214,18 +214,23 @@ p {
 }
 
 .shadow-nav {
-  -moz-box-shadow:    2px 2px 6px 2px #ccc;
-  -webkit-box-shadow: 2px 2px 6px 2px #ccc;
-  box-shadow:         2px 2px 6px 2px #ccc;
+  -moz-box-shadow:    0px -1px 10px 0px #5e5e5e;
+  -webkit-box-shadow: 0px -1px 10px 0px #5e5e5e;
+  box-shadow:         0px -1px 10px 0px #5e5e5e;
 }
 
 li.nav-item {
   a.nav-link {
-    color: #e8e8e8;
+    color: #bababa;
     &:hover {
       color: white;
     }
   }
+}
+
+sort-members {
+  font-family: $bodyFontFamily !important;
+  font-weight: bold;
 }
 
 // .quote {
